Add initial day3 code

--- a/bin/dune
+++ b/bin/dune
@@ -7,3 +7,8 @@
  (public_name aoc_2023_day2)
  (name day2)
  (libraries str))
+
+(executable
+ (public_name aoc_2023_day3)
+ (name day3)
+ (libraries str))
