--- a/bin/dune
+++ b/bin/dune
@@ -25,3 +25,8 @@
  (public_name aoc_2023_day5)
  (name day5)
  (modules day5))
+
+(executable
+ (public_name aoc_2023_day6)
+ (name day6)
+ (modules day6))
