Add day 12 part 1

--- a/bin/dune
+++ b/bin/dune
@@ -51,3 +51,8 @@
  (public_name aoc_2023_day11)
  (name day11)
  (modules day11))
+
+(executable
+ (public_name aoc_2023_day12)
+ (name day12)
+ (modules day12))
