--- a/bin/dune
+++ b/bin/dune
@@ -71,3 +71,8 @@
  (public_name aoc_2023_day15)
  (name day15)
  (modules day15))
+
+(executable
+ (public_name aoc_2023_day16)
+ (name day16)
+ (modules day16))
